[package]
name = "sensehat-screen"
description = "A library for using the 8x8-LED matrix, with RGB565 coloring, on the Raspberry Pi Sense HAT device."
version = "0.1.9"
authors = ["Joaquin Rosales <globojorro@gmail.com>"]
keywords = ["sensehat", "screen", "8x8", "raspberry-pi", "framebuffer"]
categories = ["embedded", "rendering", "visualization", "encoding"]
homepage = "https://github.com/saibatizoku/sensehat-screen-rs"
repository = "https://github.com/saibatizoku/sensehat-screen-rs"
readme = "README.md"
license = "MIT"
build = "build.rs"

[dependencies]
framebuffer = { version = "0.1", optional = true }
font8x8 = { version = "0.1.5", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = ["clip", "linux-framebuffer", "fonts", "offset", "rotate", "scroll", "serde-support"]

big-endian = []
clip = []
fonts = ["font8x8"]
linux-framebuffer = ["framebuffer"]
offset = ["clip"]
rotate = []
scroll = ["clip"]
serde-support = ["serde", "serde_derive"]

[build-dependencies]
rustc_version = "0.2"
